--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -2,7 +2,13 @@
 
 
 @main("Dashboard") {
-    <h1>Your systems</h1>
+    <div class="page-header">
+        <h1>Your systems</h1>
+        <div class="btn-toolbar">
+            <a class="btn btn-primary btn-lg" href="@routes.RegisterSystemController.index()" role="button">Add new</a>
+        </div>
+    </div>
+
     <table class="table table-striped table-hover">
         @for(systemView <- list) { @statusRow(systemView) }
     </table>
