--- a/app/views/registerSystem.scala.html
+++ b/app/views/registerSystem.scala.html
@@ -1,14 +1,46 @@
-@(serviceForm: Form[RegisteredSystem])(implicit messages: Messages)
+@(serviceForm: Form[RegisteredSystemForm], systems: Seq[RegisteredSystem])(implicit request: RequestHeader)    
+@main("Dashboard") {    
 
+    <div class="container" style="max-width: 50%;">
+        <form id="system-data-form" role="form" action='@routes.RegisterSystemController.addSystem()' method="post" >
+            <div class="form-group row">
+                <label for="formGroupExampleInput" class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="name" placeholder="codecentric" >
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputPassword3" class="col-sm-2 col-form-label">URL</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="url" placeholder="www.codecentric.de">
+                </div>
+            </div>
+            <br/>
+            <div class="form-actions controls ynt-btn-xlarge">
+                <button type="submit" class="btn btn-primary ynt-btn-orange">Add</button>
+            </div>
 
+        </form>
+    </div>
 
-@main("Dashboard") {
-
-
-    @helper.form(action = routes.RegisterSystemController.handleRequest()) {
-        @helper.inputText(serviceForm("name"))
-        @helper.inputText(serviceForm("url"))
-    }
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>URL</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for(system <- systems) { 
+                <tr> 
+                    <td>@system.id</td> 
+                    <td>@system.name</td> 
+                    <td>@system.url</td> 
+                </tr> 
+            } 
+        </tbody>
+    </table>
 }
 
 
