--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -33,7 +33,7 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="@routes.DashboardController.index()">Dashboard</a></li>
                         <li><a href="@routes.RegisterSystemController.index()">Add new system</a></li>
                         <li><a href="@routes.CountController.count()">About</a></li>
                         <li><a href="#contact">Contact</a></li>
